Update movie ranking project.html

--- a/public/movie ranking project.html
+++ b/public/movie ranking project.html
@@ -5,7 +5,7 @@
 <hr/>
 <h3>Kimi No Nawa</h3>
 <p>Brilliant story and very emotional</p>
-<h3>Avengers</h3>
-<p>Very good visuals</p>
+<h3>Manchester by the sea</h3>
+<p>Very emotional.</p>
 <h3>Avengers</h3>
 <p>Spectacular visuals.Who doesn't like superhero movies</p>
